--- a/workshop1.ipynb
+++ b/workshop1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "120"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +30,6 @@
     "#you can use a # to denote comments, which python will ignore\n",
     "\n",
     "#let's define a couple of strings, and then use the len() function to determine their length in characters\n",
-    "\n",
     "english_string = 'All life is a stage and game: either learn to play shifting off your seriousness, or bear the weight or your sufferings.'\n",
     "greek_string = \"σκηνὴ πᾶς ὁ βίος καὶ παίγνιον: ἢ μάθε παίζειν, τὴν σπουδὴν μεταθείς, ἢ φέρε τὰς ὀδύνας.\"\n",
     "len(greek_string)\n",
@@ -50,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +171,9 @@
      "output_type": "stream",
      "text": [
       "['σκηνὴ', 'πᾶς', 'ὁ', 'βίος', 'καὶ', 'παίγνιον:', 'ἢ', 'μάθε', 'παίζειν,', 'τὴν', 'σπουδὴν', 'μεταθείς,', 'ἢ', 'φέρε', 'τὰς', 'ὀδύνας.']\n",
-      "['σκηνὴ πᾶς ὁ ', 'ίος καὶ παίγνιον: ἢ μάθε παίζειν, τὴν σπουδὴν μεταθείς, ἢ φέρε τὰς ὀδύνας.']\n",
+      "['σκηνὴ πᾶς ὁ βίος καὶ παίγνιον: ἢ μάθε παίζειν, τὴν σπουδὴν μεταθείς, ἢ φέρε τὰς ὀδύνας.']\n",
+      "<class 'list'>\n",
+      "16\n",
       "\n",
       "Here's some\n",
       "text\n",
@@ -186,11 +187,16 @@
    "source": [
     "# split() #splitlines()\n",
     "print(greek_string.split()) #by default, split will split on whitespace\n",
-    "print(greek_string.split('β'))\n",
+    "print(greek_string.split('a'))\n",
+    "\n",
+    "words = greek_string.split()\n",
+    "print(type(words))\n",
+    "print(len(words))\n",
     "\n",
     "lines_of_text=\"\\nHere's some\\ntext\\nthat is split into lines\\nusing \\\\n\\n\"\n",
     "print(lines_of_text)\n",
-    "print(lines_of_text.splitlines())"
+    "print(lines_of_text.splitlines())\n",
+    "\n"
    ]
   },
   {
@@ -207,15 +213,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world!\n",
-      "HELLO WORLD!\n",
+      "hello world\n",
+      "HELLO WORLD\n",
       "700\n",
       "This is my new and improved string\n"
      ]
@@ -223,6 +229,7 @@
    ],
    "source": [
     "string_name = \"hello world!\"\n",
+    "string_name = \"hello world\"\n",
     "string_name.upper()\n",
     "print(string_name) \n",
     "\n",
@@ -259,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -267,12 +274,17 @@
      "output_type": "stream",
      "text": [
       "<class 'int'>\n",
-      "<class 'float'>\n"
+      "<class 'float'>\n",
+      "3\n",
+      "2.0\n"
      ]
     }
    ],
    "source": [
     "# integers and floats\n",
+    "from math import sqrt\n",
+    "\n",
+    "\n",
     "number1 = -3\n",
     "print(type(number1))\n",
     "\n",
@@ -283,7 +295,10 @@
     "\n",
     "multiplication = number1 * number2\n",
     "subtraction = number2 - number1\n",
-    "addition = number1 + number2 + number1 + number2"
+    "addition = number1 + number2 + number1 + number2\n",
+    "\n",
+    "print(abs(-3))\n",
+    "print(sqrt(4))"
    ]
   },
   {
@@ -305,13 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "3\n",
       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 0]\n"
      ]
     },
@@ -321,7 +337,7 @@
        "45"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +347,7 @@
     "# note: we've already seen lists today, remember split()?\n",
     "\n",
     "my_num_list = [1,2,3,4]\n",
-    "my_double_list = [2.5, 4.7, 9.999]\n",
+    "my_float_list = [2.5, 4.7, 9.999]\n",
     "my_str_list = [\"hi\", \"there\", \"everyone\"]\n",
     "my_mixed_list = [\"hi there\", 4, 5.5]\n",
     "my_list_list = [[1,2,3], [4,5,6], [7,8,9]]\n",
@@ -342,6 +358,8 @@
     "my_num_list.insert(8, 9) #inserts the number 9 at index 8\n",
     "my_num_list += [0]\n",
     "\n",
+    "print(my_num_list[2])\n",
+    "\n",
     "print(my_num_list)\n",
     "\n",
     "sum(my_num_list)\n"
@@ -349,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -357,10 +375,10 @@
      "evalue": "unsupported operand type(s) for +: 'int' and 'list'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[50], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# this will not work!\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmy_list_list\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'list'"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[26], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# this will not work!\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;43msum\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmy_list_list\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'list'"
      ]
     }
    ],
@@ -371,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -396,45 +414,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "greek\n"
+      "latin\n"
      ]
     }
    ],
    "source": [
     "# tuples\n",
-    "my_tuple = (\"greek\", \"latin\", \"english\", \"sanskrit\", \"latin\")\n",
-    "print(my_tuple[0])\n",
+    "my_tuple = (\"ancient greek\", \"latin\", \"english\", \"sanskrit\", \"latin\")\n",
+    "print(my_tuple[1])\n",
     "\n",
     "# this won't work because tuples are immutable, like strings\n",
-    "# my_tuple[0] = \"ancient greek\""
+    "# my_tuple[1] = \"ancient greek\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "{'this': 2, 'is': 1, 'cool': 1, 'thing': 1}\n"
      ]
     }
    ],
    "source": [
     "# dictionaries\n",
     "corpus = \"this is this cool thing\"\n",
+    "corpuslist = corpus.split()\n",
     "my_dictionary = {\"this\": 2, \"is\": 1, \"cool\": 1, \"thing\": 1}\n",
     "\n",
-    "print(my_dictionary[\"this\"])\n",
+    "#to generate the above dictionary\n",
+    "dict = {}\n",
+    "for word in corpuslist:\n",
+    "    if word not in dict:\n",
+    "        dict[word] = 1\n",
+    "    else:\n",
+    "        dict[word] = dict[word] + 1\n",
+    "print(dict)\n",
     "\n",
     "#dictionaries don't just have to be strings and integers, they can be pretty much anything\n",
     "my_latin_disctionary = {\"bonus, -a, -um\": \"good\", \"nox, noctis, f\": \"night\"}\n",
@@ -458,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
