--- a/wip/workshop2.ipynb
+++ b/wip/workshop2.ipynb
@@ -13,17 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number is divisible by 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num = 5\n",
     "if num < 5:\n",
@@ -37,22 +29,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also use \"elif\" and \"else\" in your if statements. \"elif\" is for testing a different condition, if the previous condition(s) were not met. \"else\" is used to designate code that will run if none of the above conditions were met. "
+    "You can also use \"elif\" and \"else\" in your if statements. \"elif\" is for testing a different condition, if the previous condition(s) were not met. \"else\" doesn't come with a condition, instead it is used to designate code that will run if none of the above conditions were met. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hope you're not too sleepy.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "corpus = \"Good evening everyone, I hope you're having a wonderful time in Python workshop!\"\n",
     "corpus_list = corpus.split()\n",
@@ -77,17 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Good evening to you as well!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if \"Good\" in corpus_list and \"evening\" in corpus_list or \"night\" in corpus_list:\n",
     "    print(\"Good evening to you as well!\")\n",
@@ -99,23 +75,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At times, it can be helpful to store your conditions in a variable. *Booleans* or Bools are another built-in data type that we did not discuss last time. Bools represent a simple true/false value. "
+    "At times, it can be helpful to store your conditions in a variable. *Booleans* or Bools are another built-in data type that we did not discuss last time. Bools represent a simple True or False value. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The first corpus is a valid length\n",
-      "valid\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Let's pretend a \"valid\" corpus has at least 5 words in it. \n",
     "corpus1 = \"All the world’s a stage, and all the men and women merely players\"\n",
@@ -133,9 +100,9 @@
     "# a slightly clearer way of writing the above statement might be to use an else\n",
     "\n",
     "if corpus1_isValid:\n",
-    "    print(\"valid\")\n",
+    "    print(\"The first corpus is a valid length\")\n",
     "else:\n",
-    "    print(\"not valid\")"
+    "    print(\"The first corpus is not a valid length\")"
    ]
   },
   {
@@ -151,6 +118,117 @@
    "metadata": {},
    "source": [
     "### Loops\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are two main types of loops in Python: while loops and for loops. While loops will repeat until the given condition is not satisfied. For loops are generally used to traverse over iterable objects like lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "condition = True\n",
+    "\n",
+    "#you could also say while condition is True: or while condition == True:\n",
+    "while condition:\n",
+    "    print(\"Condition is true\")\n",
+    "    condition = False\n",
+    "\n",
+    "count = 5\n",
+    "while count < 10:\n",
+    "    print(count)\n",
+    "    count = count + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for num in range(0, 5):\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = \"here is a string of words\"\n",
+    "corpus_list = corpus.split()\n",
+    "count = 0\n",
+    "\n",
+    "for word in corpus_list:\n",
+    "    print(f\"{count}: {word}\")\n",
+    "    count = count + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Nested Statments\n",
+    "You can nest statements in Python, which just means you can put them inside each other. Keep in mind that Python uses indentation to understand what statements belong where, so be careful to properly indent. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "long_words = 0\n",
+    "short_words = 0\n",
+    "\n",
+    "for word in corpus_list:\n",
+    "    if len(word) < 5:\n",
+    "        short_words = short_words + 1\n",
+    "    else:\n",
+    "        long_words = long_words + 1\n",
+    "\n",
+    "print(f\"there are {short_words} short words and {long_words} long words\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# be careful of the exact manner in which you declare variables\n",
+    "# the following line fixes this code by declaring the variable outside the scope of the for loop\n",
+    "#is_pausanias_here = False\n",
+    "\n",
+    "if len(corpus_list) > 0:\n",
+    "    for word in corpus_list:\n",
+    "        if word == \"Pausanias\":\n",
+    "            is_pausanias_here = True\n",
+    "\n",
+    "print(f\"Does the word \\\"here\\\" occur in the corpus? {is_pausanias_here}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e_count = 0\n",
+    "\n",
+    "for word in corpus_list:\n",
+    "    for letter in word: \n",
+    "        if letter == \"e\":\n",
+    "            e_count += 1 # this line is the same as e_count = e_count + 1\n",
+    "\n",
+    "print(f\"there are {e_count} instances of the letter e in the corpus\")"
    ]
   }
  ],
