--- a/wip/workshop3.ipynb
+++ b/wip/workshop3.ipynb
@@ -13,9 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['virumque', 'canō,', 'Trōiae', 'prīmus', 'Ītaliam,', 'profugus,', 'Lāvīniaque', 'vēnit', 'lītora,', 'multum', 'terrīs', 'iactātus', 'superum', 'saevae', 'memorem', 'Iūnōnis']\n"
+     ]
+    }
+   ],
    "source": [
     "corpus = \"Arma virumque canō, Trōiae quī prīmus ab ōrīs\\nĪtaliam, fātō profugus, Lāvīniaque vēnit\\nlītora, multum ille et terrīs iactātus et altō\\nvī superum saevae memorem Iūnōnis ob īram\"\n",
     "corpus_list = corpus.split()\n",
@@ -37,9 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['VIRUMQUE', 'CANŌ,', 'TRŌIAE', 'PRĪMUS', 'ĪTALIAM,', 'PROFUGUS,', 'LĀVĪNIAQUE', 'VĒNIT', 'LĪTORA,', 'MULTUM', 'TERRĪS', 'IACTĀTUS', 'SUPERUM', 'SAEVAE', 'MEMOREM', 'IŪNŌNIS']\n"
+     ]
+    }
+   ],
    "source": [
     "long_words = [word.upper() for word in corpus_list if len(word) > 4]\n",
     "print(long_words)"
@@ -58,9 +74,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['VIRUMQUE', 'CANŌ,', 'TRŌIAE', 'PRĪMUS', 'ĪTALIAM,', 'PROFUGUS,', 'LĀVĪNIAQUE', 'VĒNIT', 'LĪTORA,', 'MULTUM', 'TERRĪS', 'IACTĀTUS', 'SUPERUM', 'SAEVAE', 'MEMOREM', 'IŪNŌNIS']\n",
+      "['VIRUMQUE', 'CANŌ,', 'TRŌIAE', 'PRĪMUS', 'ĪTALIAM,', 'PROFUGUS,', 'LĀVĪNIAQUE', 'VĒNIT', 'LĪTORA,', 'MULTUM', 'TERRĪS', 'IACTĀTUS', 'SUPERUM', 'SAEVAE', 'MEMOREM', 'IŪNŌNIS']\n",
+      "the lists are the same\n"
+     ]
+    }
+   ],
    "source": [
     "long_words = [word.upper() for word in corpus_list if len(word) > 4]\n",
     "\n",
@@ -88,9 +114,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Arma', 'virumque', 'canō,', 'Trōiae', 'quī', 'prīmus', 'ab', 'ōrīs', 'Ītaliam,', 'fātō', 'profugus,', 'Lāvīniaque', 'vēnit', 'lītora,', 'multum', 'ille', 'et', 'terrīs', 'iactātus', 'et', 'altō', 'vī', 'superum', 'saevae', 'memorem', 'Iūnōnis', 'ob', 'īram']\n",
+      "['Arma', 'virumque', 'canō,', 'Trōiae', 'quī']\n",
+      "['quī', 'prīmus', 'ab', 'ōrīs', 'Ītaliam,', 'fātō']\n",
+      "['Arma', 'Trōiae', 'ab', 'fātō', 'vēnit', 'ille', 'iactātus', 'vī', 'memorem', 'īram']\n",
+      "['Arma', 'canō,', 'quī', 'ab', 'Ītaliam,']\n"
+     ]
+    }
+   ],
    "source": [
     "print(corpus_list[:]) # all the elements\n",
     "print(corpus_list[0:5]) # first 5 elements, note that it includes the 0th element and not the 5th element\n",
@@ -111,21 +149,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<enumerate object at 0x0000022D83C2FBC0>\n",
+      "0 Arma\n",
+      "1 virumque\n",
+      "2 canō,\n",
+      "3 Trōiae\n",
+      "4 quī\n",
+      "5 prīmus\n",
+      "6 ab\n",
+      "7 ōrīs\n",
+      "8 Ītaliam,\n",
+      "9 fātō\n",
+      "10 profugus,\n",
+      "11 Lāvīniaque\n",
+      "12 vēnit\n",
+      "13 lītora,\n",
+      "14 multum\n",
+      "15 ille\n",
+      "16 et\n",
+      "17 terrīs\n",
+      "18 iactātus\n",
+      "19 et\n",
+      "20 altō\n",
+      "21 vī\n",
+      "22 superum\n",
+      "23 saevae\n",
+      "24 memorem\n",
+      "25 Iūnōnis\n",
+      "26 ob\n",
+      "27 īram\n"
+     ]
+    }
+   ],
    "source": [
     "# enumerate\n",
     "corpus_list_nums = enumerate(corpus_list)\n",
-    "for index, word in corpus_list_nums:\n",
-    "    print(index, word)"
+    "print(corpus_list_nums)\n",
+    "\n",
+    "for x, word in corpus_list_nums:\n",
+    "    print(x, word)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# min and max\n",
     "word_lengths = [3, 5, 2]\n",
@@ -152,9 +236,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'et': 2, 'Arma': 1, 'virumque': 1, 'canō,': 1, 'Trōiae': 1, 'quī': 1, 'prīmus': 1, 'ab': 1, 'ōrīs': 1, 'Ītaliam,': 1, 'fātō': 1, 'profugus,': 1, 'Lāvīniaque': 1, 'vēnit': 1, 'lītora,': 1, 'multum': 1, 'ille': 1, 'terrīs': 1, 'iactātus': 1, 'altō': 1, 'vī': 1, 'superum': 1, 'saevae': 1, 'memorem': 1, 'Iūnōnis': 1, 'ob': 1, 'īram': 1})\n",
+      "Counter({'et': 3, 'Arte': 2, 'Arma': 1, 'virumque': 1, 'canō,': 1, 'Trōiae': 1, 'quī': 1, 'prīmus': 1, 'ab': 1, 'ōrīs': 1, 'Ītaliam,': 1, 'fātō': 1, 'profugus,': 1, 'Lāvīniaque': 1, 'vēnit': 1, 'lītora,': 1, 'multum': 1, 'ille': 1, 'terrīs': 1, 'iactātus': 1, 'altō': 1, 'vī': 1, 'superum': 1, 'saevae': 1, 'memorem': 1, 'Iūnōnis': 1, 'ob': 1, 'īram': 1, 'Siquis': 1, 'in': 1, 'hoc': 1, 'artem': 1, 'populo': 1, 'non': 1, 'novit': 1, 'amandi,': 1, 'Hoc': 1, 'legat': 1, 'lecto': 1, 'carmine': 1, 'doctus': 1, 'amet': 1, 'citae': 1, 'veloque': 1, 'rates': 1, 'remoque': 1, 'moventur,': 1, 'leves': 1, 'currus:': 1, 'arte': 1, 'regendus': 1, 'amor.': 1})\n",
+      "Counter({'et': 1})\n",
+      "most common word in first corpus [('et', 2), ('Arma', 1), ('virumque', 1), ('canō,', 1), ('Trōiae', 1)] in second corpus [('Arte', 2)]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from collections import Counter\n",
@@ -184,7 +279,7 @@
    "source": [
     "# set\n",
     "tokens = ['this', 'is', 'a', 'test', 'this']\n",
-    "unique_tokens = list(set(tokens)) # remember that sets are lists with only unique values\n",
+    "unique_tokens = set(tokens) # remember that sets are lists with only unique values\n",
     "\n",
     "print(unique_tokens)"
    ]
