--- a/completed_workshops/workshop3.ipynb
+++ b/completed_workshops/workshop3.ipynb
@@ -273,9 +273,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'this', 'test', 'is', 'a'}\n"
+     ]
+    }
+   ],
    "source": [
     "# set\n",
     "tokens = ['this', 'is', 'a', 'test', 'this']\n",
@@ -293,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +319,7 @@
     "        right = min(i + r_size + 1, len(lemmata))\n",
     "\n",
     "        window = lemmata[left:right]\n",
-    "        print(window)\n",
+    "   \n",
     "        if w2 in window:\n",
     "            cooccurrences += 1\n",
     "            \n",
